--- a/Ibaraki Beta Weight/App.config
+++ b/Ibaraki Beta Weight/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Ibaraki_Beta_Weight.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
+    <userSettings>
+        <Ibaraki_Beta_Weight.My.MySettings>
+            <setting name="Chk_Key" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Ibaraki_Beta_Weight.My.MySettings>
+    </userSettings>
 </configuration>
