--- a/Ibaraki Beta Weight/App.config
+++ b/Ibaraki Beta Weight/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="Ibaraki_Beta_Weight.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Ibaraki_Beta_Weight.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
@@ -15,4 +18,26 @@
             </setting>
         </Ibaraki_Beta_Weight.My.MySettings>
     </userSettings>
+    <applicationSettings>
+        <Ibaraki_Beta_Weight.My.MySettings>
+            <setting name="Pr_D10" serializeAs="String">
+                <value>114</value>
+            </setting>
+            <setting name="Pr_D13" serializeAs="String">
+                <value>112</value>
+            </setting>
+            <setting name="Pr_D16" serializeAs="String">
+                <value>110</value>
+            </setting>
+            <setting name="Pr_D19" serializeAs="String">
+                <value>112</value>
+            </setting>
+            <setting name="Pr_D22" serializeAs="String">
+                <value>112</value>
+            </setting>
+            <setting name="Pr_Proc" serializeAs="String">
+                <value>129</value>
+            </setting>
+        </Ibaraki_Beta_Weight.My.MySettings>
+    </applicationSettings>
 </configuration>
