--- a/Ibaraki Beta Weight/My Project/Settings.settings
+++ b/Ibaraki Beta Weight/My Project/Settings.settings
@@ -5,5 +5,23 @@
     <Setting Name="Chk_Key" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Pr_D10" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">114</Value>
+    </Setting>
+    <Setting Name="Pr_D13" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">112</Value>
+    </Setting>
+    <Setting Name="Pr_D16" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">110</Value>
+    </Setting>
+    <Setting Name="Pr_D19" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">112</Value>
+    </Setting>
+    <Setting Name="Pr_D22" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">112</Value>
+    </Setting>
+    <Setting Name="Pr_Proc" Type="System.Double" Scope="Application">
+      <Value Profile="(Default)">129</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
